--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -7,6 +7,8 @@ body
 	-webkit-font-smoothing: antialiased
 	-moz-osx-font-smoothing: grayscale
 	color: $black
+	// width: 100%
+	// overflow-x: hidden
 	a
 		color: inherit
 		text-decoration: none
@@ -15,7 +17,7 @@ body
 
 .wr
 	box-sizing: border-box
-	padding: 5em 0 0
+	padding: 4em 0 0
 	// min-height: 100vh
 	@media screen and (max-width: 800px)
 		padding: 3em 0 0
