--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -2,6 +2,7 @@
 @import '../../bower_components/font-awesome/css/font-awesome.min.css'
 
 @import 'vars'
+@import 'animations'
 
 @import 'general'
 @import 'header'
